--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <div class="container px-4 px-lg-5">
                 <div class="row gx-4 gx-lg-5 justify-content-center">
                     <div class="col-md-10 col-lg-8 col-xl-7">
-                        <div class="small text-center text-muted fst-italic">Copyright &copy; Jessica Matheson 2022</div>
+                        <div class="small text-center text-muted fst-italic">https://jessica-matheson.github.io/IS201webproject/index.html | &copy; Jessica Matheson 2022</div>
                     </div>
                 </div>
             </div>
